@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.8949 2005/01/27 15:49:53 adam Exp $
+$NetBSD: CHANGES,v 1.8950 2005/01/27 16:09:35 reinoud Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -629,3 +629,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated kkbswitch to 1.4.3 [ben 2005-01-27]
 	Added wmdrawer-0.10.5 [ben 2005-01-27]
 	Updated libtasn1 to 0.2.13 [adam 2005-01-27]
+	Updated udfclient to 0.3.3 [reinoud 2005-01-27]
